[package]
name = "bevy_tween"
description = "Flexible tweening plugin library for Bevy"
version = "0.4.0"
edition = "2021"
authors = [ "Multirious" ]
license = "MIT OR Apache-2.0" 
repository = "https://github.com/Multirious/bevy_tween"
homepage = "https://github.com/Multirious/bevy_tween"
documentation = "https://docs.rs/bevy_tween"
readme = "README.md"
keywords = [ "bevy", "tween", "tweening", "easing", "animation" ]
categories = [ "game-development" ]

[workspace]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", default-features = false }
bevy_eventlistener = { version = "0.7.0", optional = true }
bevy_time_runner = { git = "https://github.com/Multirious/bevy_time_runner" }
bevy_lookup_curve = { version = "0.2.1", default-features = false, optional = true }

[dev-dependencies]
bevy-inspector-egui = "0.23"
bevy = { version = "0.13.0", default-features = false, features = [ "bevy_asset", "bevy_render", "bevy_sprite", "tonemapping_luts", "png" ] }
bevy_svg = { git = "https://github.com/arnfaldur/bevy_svg", branch = "main" }
rand = "0.8.5"
ron = "0.8.1"

[features]
default = [
  "bevy_asset",
  "bevy_render",
  "bevy_sprite",
  "bevy_eventlistener"
]

# Adds tweening systems for asset
bevy_asset = [ "bevy/bevy_asset" ]
# Adds nothing just yet but required by the "bevy_sprite" feature.
bevy_render = [ "bevy/bevy_render"]
# Add some built-in interpolator related to sprite
bevy_sprite = [ "bevy/bevy_sprite", "bevy_render" ]

# Add entity-targeted events with bevy_eventlistener
bevy_eventlistener = [ "dep:bevy_eventlistener" ]

# Supports for `bevy_lookup_curve` (https://github.com/villor/bevy_lookup_curve)
bevy_lookup_curve = [ "dep:bevy_lookup_curve" ]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "banner_bounce"
path = "examples/animation/banner_bounce.rs"
required-features = [
  "bevy_sprite",
  "bevy_asset",
]

[[example]]
name = "banner_triangle"
path = "examples/animation/banner_triangle.rs"
required-features = [
  "bevy_sprite",
  "bevy_asset",
]

[[example]]
name = "thumbnail_triangle"
path = "examples/animation/thumbnail_triangle.rs"
required-features = [
  "bevy_sprite",
]

[[example]]
name = "bevy_logo"
path = "examples/animation/bevy_logo.rs"
required-features = [
  "bevy_sprite",
  "span_tween",
]

[[example]]
name = "follow"
path = "examples/demo/follow.rs"
required-features = [
  "bevy_sprite",
  "bevy_asset",
]

[[example]]
name = "click"
path = "examples/demo/click.rs"
required-features = [
  "bevy_sprite",
  "bevy_asset",
]

[[example]]
name = "hold"
path = "examples/demo/hold.rs"
required-features = [
  "bevy_sprite",
  "bevy_asset",
]

[[example]]
name = "event"
path = "examples/demo/event.rs"
required-features = [
  "bevy_sprite",
  "bevy_asset",
]

[[example]]
name = "entity_event"
path = "examples/demo/entity_event.rs"
required-features = [
  "bevy_eventlistener"
]

[[example]]
name = "sprite_sheet"
path = "examples/demo/sprite_sheet.rs"
required-features = [
  "bevy_sprite",
]

[[example]]
name = "entity_structure"
path = "examples/entity_structure.rs"
