[package]
name = "bevy_tween_core"
version = "0.7.0"
edition = "2021"

[dependencies]
bevy_time_runner = "0.3.0"

bevy_ecs = { version = "0.15", default-features = false }
bevy_math = { version = "0.15", default-features = false, features = ["curve"] }
bevy_animation = { version = "0.15", default-features = false }

thiserror = "2.0"

bevy_reflect = { version = "0.15", default-features = false, optional = true }
bevy_app = { version = "0.15", default-features = false, optional = true }
bevy_log = { version = "0.15", default-features = false, optional = true }
bevy_asset = { version = "0.15", default-features = false, optional = true }
bevy_transform = { version = "0.15", default-features = false, optional = true }
bevy_color = { version = "0.15", default-features = false, optional = true }

[dev-dependencies.bevy]
version = "0.15"
default-features = false

[features]
default = ["bevy_reflect", "bevy_app", "bevy_log", "bevy_asset", "bevy_transform", "bevy_color"]
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]
bevy_app = ["dep:bevy_app"]
bevy_log = ["dep:bevy_log"]
bevy_asset = ["dep:bevy_asset"]
bevy_transform = ["dep:bevy_transform"]
bevy_color = ["dep:bevy_color"]
